# toolhive-doc-mcp

./: .cursorrules  .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  Taskfile.yml  pyproject.toml  renovate.json  sources.yaml  sources.yaml.example
.github/workflows/: claude-code-review.yml  claude.yml  code-checks.yml  code-quality.yml  image-build.yml  main-and-pr.yml  release.yml  security.yml
docs/: refresh.md  telemetry.md
examples/: mcp-server.yaml
scripts/: download_s3_logs.ipynb  install-hooks.sh
src/: __init__.py  build.py  config.py  mcp_server.py  refresh.py
src/models/: __init__.py  chunk.py  embedding.py  query.py  refresh_config.py  search_result.py  source.py  sources_config.py  website_cache.py
src/services/: __init__.py  chunker.py  db_manager.py  doc_parser.py  doc_sync.py  embedder.py  example_parser.py  github_fetcher.py  html_parser.py  refresh_orchestrator.py  search.py  telemetry.py  vector_store.py  website_fetcher.py
src/utils/: sources_loader.py
tests/contract/: test_mcp_protocol.py
tests/integration/: test_db_manager.py  test_doc_sync.py  test_html_parsing.py  test_mcp_refresh_integration.py  test_query_flow.py  test_refresh_orchestrator.py  test_website_fetch.py
tests/unit/: test_config.py  test_html_parser.py  test_telemetry.py
