[project]
name = "toolhive-doc-mcp"
version = "1.0.0"
description = "MCP server for semantic search over Stacklok documentation"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.2",
    "mcp[cli]>=1.23.1",
    "uvicorn>=0.38.0",
    "sqlite-vec>=0.1.6",
    "openai>=2.8.1",
    "markdown-it-py>=4.0.0",
    "mdit-py-plugins>=0.5.0",
    "tiktoken>=0.12.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "aiohttp>=3.13.2",
    "fastembed>=0.7.3",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "pyyaml>=6.0.3",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.0",
    "python-dotenv>=1.2.1",
    "apscheduler>=3.11.1",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
    "ty>=0.0.1a31",
]
security = [
    "safety>=3.7.0",
    "bandit[toml]>=1.9.2",
    "pip-audit>=2.10.0",
    "cyclonedx-bom>=7.2.1",
]

[tool.uv.sources]
toolhive-doc-mcp = { workspace = true }

[project.scripts]
toolhive-doc-mcp = "src.mcp_server:main"
toolhive-refresh = "src.refresh:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
lint.ignore = []

[tool.ty.src]
exclude = ["tests"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-config",
    "-v",
    "--cov=src",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::ResourceWarning",
]
